# carrotdb

./: .dockerignore  .gitignore  .goreleaser.yaml  ARCHITECTURE.md  DESIGN.md  Dockerfile  README.md  carrotdb-bench  carrotdb-server  docker-compose.yaml  go.mod  go.sum
.github/workflows/: release.yml
cmd/carrotdb/: main.go
cmd/carrotdb-bench/: main.go
cmd/carrotdb-router/: main.go
cmd/carrotdb-router/static/: index.html
cmd/carrotdb-server/: main.go
conductor/: architecture-doc.md  benchmarking-suite.md  cli-upgrade.md  docker-integration.md  phase-10-sdk.md  phase-2-bitcask.md  phase-3-networking.md  phase-4-distribution.md  phase-5-sharding.md  phase-6-dashboard.md  phase-8-discovery.md  phase-9-gossip.md  trace-mode.md  visual-architecture.md
internal/engine/: engine.go  engine_test.go
internal/router/: router.go
internal/router/static/: index.html
internal/server/: fsm.go  server.go
pkg/sharding/: sharding.go  sharding_test.go
sdk/python/: README.md  example.py  pyproject.toml
sdk/python/carrotdb/: client.py
