[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carrotdb"
version = "0.11.1"
description = "Official Python client for CarrotDB distributed database"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Akshai", email = "akshai@example.com"}
]
keywords = ["database", "distributed", "key-value", "raft"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["carrotdb*"]
